--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "lint": "standard",
     "test": "jest --config jest.config.json"
   },
   "standard": {
