Add test coverage status.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "6.26.0",
     "babel-jest": "21.2.0",
     "babel-preset-env": "1.6.1",
+    "coveralls": "3.0.0",
     "jest": "21.2.1",
     "standard": "10.0.3"
   }
