--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ before_script:
 script:
   - npm run lint
   - npm test
+
+after_success:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/lcov.info | ./node_modules/.bin/coveralls ; fi
