--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 script:
   - npm run lint
   - npm test
+  - npm run build
 
 after_success:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat ./coverage/lcov.info | ./node_modules/.bin/coveralls ; fi
